# urlparser

./: CMakeLists.txt  LICENSE  README.md
resources/: desktop.in  resources.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parse.cpp  parse.h
